# DeepFilterNet4

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHECKPOINT_RESUME.md  CONTRIBUTING.md  Cargo.toml  DATASETS.md  README.md  SCHEMA_COMPLIANCE.md  convert_gguf_to_mlx.py  gguf_to_mlx_converter.py  pipeline_awesome_investigation.md  pipeline_awesome_investigation_results.md  post-release.sh  pyrightconfig.json  release.sh  setup.sh  simple_convert.py  test_hf_fs.py  test_hf_fs_npz.py  test_hf_fs_npz2.py  test_hf_fs_npz3.py  test_hf_fs_npz4.py
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.codex/: AGENTS.md  README.md  TOOLSET.md  config.toml
.codex/agents/: dfn-architect-strategist.agent.md  dfn-debugger-problem-solver.agent.md  dfn-documentation-writer.agent.md  dfn-python-mlx-engineer.agent.md  (+4 more)
.githooks/: post-checkout  post-merge  post-merge.old  post-rewrite  pre-commit  pre-commit.old  pre-push  pre-push.old
.github/: CHECKS.md  CODEOWNERS  SETUP_GUIDE.md  copilot-instructions.md  dependabot.yml
DeepFilterNet/: AGENTS.md  benchmark_dfn3_enhance_backends.py  benchmark_mlx_vs_pytorch.py  benchmark_optimizations.py  benchmark_sync_barriers.py  pyproject.toml  requirements.txt  requirements_dnsmos.txt  requirements_eval.txt  requirements_mlx.txt  test_dfnetmf.py
DeepFilterNet/df/: checkpoint.py  config.py  enhance.py  io.py  logger.py  loss.py  spectral.py  utils.py
DeepFilterNet/df/scripts/: filter_dnsmos.py  test_df.py
DeepFilterNet/df_mlx/: README.md  ROADMAP.md  __init__.py  _audio_io.py  augment_ext.py  benchmark_common.py  benchmark_gan_profile.py  benchmark_gan_sync.py  benchmark_gan_throughput.py  benchmark_hotspots.py  benchmark_pipeline.py  benchmark_train_step.py  build_audio_cache.py  checkpoint.py  config.py  convert.py  datastore.py  deepfilternet3.py  discriminator.py  dnsmos_proxy.py  dynamic_dataset.py  enhance.py  evaluation.py  feature_ops.py  file_lists.py  generate_file_lists.py  grad_utils.py  hardware.py  hf_paths.py  kernels.py  loss.py  lr.py  mamba.py  model.py  modules.py  ops.py  prepare_data.py  run_ablation_sweep.py  run_config.py  sepm.py  (+26 more)
DeepFilterNet/df_mlx/configs/: train.ini
DeepFilterNet/df_mlx/configs/run_profiles/: baseline_dfn3_gan_vad_speech_ablation_datahard.toml  baseline_dfn3_gan_vad_speech_ablation_ganmix.toml  baseline_dfn3_gan_vad_speech_ablation_vadlite.toml  baseline_dfn3_gan_vad_speech_aggressive.toml  baseline_dfn3_gan_vad_speech_full_vadlite.toml  pipeline_awesome_gan_balanced.toml  pipeline_awesome_gan_curriculum.toml  pipeline_awesome_gan_curriculum_adj.toml  pipeline_awesome_gan_curriculum_speech_only.toml  pipeline_awesome_gan_optimized.toml  pipeline_awesome_gan_quality.toml  pipeline_awesome_gan_runme.toml  pipeline_awesome_gan_throughput.toml  run_pipeline_awesome_gan_silero_single.toml  run_pipeline_awesome_gan_silero_single_oom_safe.toml
DeepFilterNet/examples/: mlx_training.py
DeepFilterNet/tests/: analyze_mask_penalty.py  conftest.py  debug_single_frame.py  debug_single_frame_full.py  test_audit_fixes.py  test_augment_extension.py  test_backend_module_separation.py  test_batch_assembly.py  test_benchmark_common_helpers.py  test_benchmark_contract.py  test_benchmark_hotspots.py  test_benchmark_pipeline_matrix.py  test_build_audio_cache.py  test_checkpoint_cleanup_and_atomicity.py  test_checkpoint_epoch_rollback_script.py  test_checkpoint_resume_dynamic.py  test_compile_boundary_audit.py  test_compiled_gan_experiment.py  test_convert_dfnet3_archive_to_mlx.py  test_copy_datadir.py  test_data_checkpoint_resume.py  test_dataset_scripts.py  test_deepfilternet4.py  test_dflib.py  test_dfn3_baseline_profiles.py  test_dfop_metal_kernel.py  test_dfop_vectorized_equivalence.py  test_dnsmos_melspec_vectorization.py  test_dynamic_dataset_failure_modes.py  test_dynamic_loss_numerics.py  test_extension_packing.py  test_feature_ops_equivalence.py  test_file_list_reading_equivalence.py  test_fused_spectral_loss.py  test_gan_compile_experiment.py  test_gan_memory_path.py  test_gan_oom_fixes.py  test_grad_nonfinite.py  test_grad_utils.py  test_guarded_fallback.py  (+42 more)
demo/: Cargo.toml
docs/: ARCHITECTURE.md  AUDIT_ERRORS_PASS10.md  AUDIT_ERRORS_PASS11.md  AUDIT_ERRORS_PASS12.md  AUDIT_ERRORS_PASS13.md  AUDIT_ERRORS_PASS4.md  AUDIT_ERRORS_PASS6.md  AUDIT_ERRORS_PASS7.md  AUDIT_ERRORS_PASS8.md  AUDIT_ERRORS_PASS9.md  BENCHMARKS.md  BENCHMARK_CONTRACT.md  COMPILE_BOUNDARY_AUDIT.md  CONVENTIONS.md  DATA_PIPELINE_TUNING.md  DFNET3_MLX_QUALITY_INVESTIGATION.md  DF_MLX_PERFORMANCE_BACKLOG.md  DUPLICATION_AUDIT_PASS4.md  DUPLICATION_AUDIT_PASS5.md  DUPLICATION_AUDIT_PASS6.md  DUPLICATION_AUDIT_PASS7.md  DUPLICATION_AUDIT_PASS8.md  DUPLICATION_AUDIT_PASS9.md  ERROR_TAXONOMY.md  GAN_COMPILE_EXPERIMENT.md  IMPLEMENTATION_HANDOFF.md  INCIDENT_LOSS_VAD_AUDIT_2025_01.md  INCIDENT_TRAIN_CONTROL_RESUME_2026_02.md  LOSSES.md  LOSSES_AN_INTRODUCTION_TO_LOSS.md  LOSS_LANDSCAPE_ANALYSIS.md  PERFORMANCE_AUDIT.md  PERFORMANCE_AUDIT_PASS10.md  PERFORMANCE_AUDIT_PASS5.md  PERFORMANCE_AUDIT_PASS6.md  PERFORMANCE_AUDIT_PASS7.md  PERFORMANCE_AUDIT_PASS9.md  PERF_REGRESSION_GATE.md  RUN_CONFIG_PRESETS.md  SETUP_AUDIT_2026_02.md  (+1 more)
ladspa/: Cargo.toml
libDF/: Cargo.toml
libDF/src/: dataloader.rs  lib.rs
logs/: sync_barrier_benchmark.json  sync_barrier_benchmark_large.json
pyDF/: Cargo.toml  pyproject.toml
pyDF-augment/: Cargo.toml  pyproject.toml
pyDF-augment/src/: lib.rs
pyDF-data/: Cargo.toml  libDF  pyproject.toml
pyDF-data/libdfdata/: __init__.py  torch_dataloader.py
pyDF-data/tests/: test_torch_dataloader_safety.py
schemas/: README.md  example-run-config.toml  run-config.schema.json
scripts/: Run_train_dynamic.ipynb  VIDEO_ENHANCEMENT_README.md  benchmark_perf_comparison.py  compare_benchmarks.py  compare_models.py  copy_datadir.py  generate_playlists.py  guard-upstream-remote.sh  install-hooks.sh  live_spectrum.py  perf_gate.py  rollback_checkpoint_epoch.py  test_checkpoint_enhancements.py  test_video_enhancement.py  upload_datastore_to_hf.py
(+51 files in other folders)
