[project]
name = "DeepFilterNet4"
version = "0.8.0"
description = "Noise supression using deep filtering; an advancement in real-time speech enhancement."
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
  { name = "Dr. Andrew Cox" },
  { name = "Hendrik Schröter" },
]
keywords = ["noise reduction", "neural network"]
classifiers = [
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

# Keep local workspace bindings in development; the release scripts rewrite
# these direct references to published package versions before publishing.
dependencies = [
  "deepfilterlib @ file:../pyDF",
  "numpy>=2.2.6,<3.0",
  "loguru>=0.7.3",
  "appdirs>=1.4.4,<2",
  "requests>=2.34.2,<3",
  "packaging>=23,<27",
  "sympy>=1.14.0",
  "torch>=2.12.0",
  "torchaudio>=2.11.0",
  "librosa>=0.11.0,<0.12.0",
  "pandas",
  "huggingface_hub>=1.17.0",
  "tqdm",
  "h5py",
  "ptflops",
  "tomli>=2.0; python_version < '3.11'",
  "pyaudio>=0.2.14,<0.3.0",
]

[project.urls]
Repository = "https://github.com/sealad886/DeepFilterNet4"

[project.optional-dependencies]
train = [
  "deepfilterdataloader @ file:../pyDF-data",
  "icecream>=2,<3",
]
eval = [
  "pystoi>=0.3,<0.5",
  "pesq>=0.0.4,<0.0.5; platform_system != 'Windows'",
  "scipy>=1.15.3,<2",
]
soundfile = ["soundfile>=0.13.1,<0.14"]
dnsmos-local = ["onnxruntime>=1.24.3,<1.25"]
# ASR-based loss and evaluation (requires openai-whisper)
asr = ["openai-whisper>=20250625"]
mlx = [
  "mlx>=0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-whisper>=0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-data>=0.2.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
# Combined ASR with MLX optimization
asr-mlx = [
  "openai-whisper>=20250625",
  "mlx>=0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-whisper>=0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-data>=0.2.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
dev = [
  "poethepoet>=0.46.0,<0.47",
  "pytest>=9,<10",
  "matplotlib>=3.8,<4",
]

[project.scripts]
deepFilter = "df.enhance:run"
deep-filter-py = "df.enhance:run"

[tool.setuptools]
packages = ["df", "df_mlx"]

[tool.poe.tasks]
install-torch-cuda121 = "pip install torch==2.9.1+cu121 torchaudio==2.9.1+cu121 --extra-index-url https://download.pytorch.org/whl/cu121"
install-torch-cuda124 = "pip install torch==2.9.1+cu124 torchaudio==2.9.1+cu124 --extra-index-url https://download.pytorch.org/whl/cu124"
install-torch-cpu = "pip install torch==2.9.1+cpu torchaudio==2.9.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu"
install-torch-mps = "pip install torch==2.9.1 torchaudio==2.9.1"
install-eval-utils = "python -m pip install -r requirements_eval.txt"
install-dnsmos-utils = "python -m pip install -r requirements_dnsmos.txt"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["df", "libdf", "libdfdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mps: mark test as requiring MPS backend (skip on non-macOS)",
]
