[package]
name = "df-demo"
version = "0.8.0"
authors = ["Dr. Andrew Cox", "Hendrik Schröter"]
edition = "2021"

[[bin]]
name = "df-demo"
path = "src/main.rs"
required-features = ["ui"]

[[bin]]
# Command line demo without UI or controls
name = "df-demo-c"
path = "src/capture.rs"

[features]
ui = ["iced", "image_rs"]
default-model-ll = ["deep_filter/default-model-ll"]
thresholds = []

[dependencies]
# Use iced 0.12.x which still supports the Application trait API used by this demo
iced = { version = "*", features = [
  "image",
  "debug",
  "tokio",
  "lazy",
], optional = true }
itertools = "*"
crossbeam-channel = "*"
image_rs = { package = "image", version = "*", optional = true }
anyhow = "*"
cpal = "*"
clap = { version = "*", features = ["derive"] }
deep_filter = { path = "../libDF/", default-features = false, features = [
  "tract",
  "use-jemalloc",
  "default-model",
] }
# Use workspace ndarray version for compatibility with libDF
ndarray = { workspace = true }
rubato = "*"
ringbuf = "*"
env_logger = "*"
log = { version = "*", features = ["std"] }
