[package]
name = "deep-filter-ladspa"
version = "0.8.0"
authors = ["Dr. Andrew Cox", "Hendrik Schröter"]
edition = "2021"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
dbus = ["dep:zbus", "dep:event-listener"]
default-model-ll = ["deep_filter/default-model-ll"]
default = ["default-model-ll"]

[dependencies]
deep_filter = { path = "../libDF", default-features = false, features = [
  "tract",
  "use-jemalloc",
  "default-model",
] }
ladspa = "*"
# Use workspace ndarray version for compatibility with libDF
ndarray = { workspace = true }
env_logger = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }
log = { version = "*", features = ["std"] }
zbus = { version = "*", optional = true }
event-listener = { version = "*", optional = true }
