[package]
name = "deep_filter"
version = "0.8.0"
authors = ["Dr. Andrew Cox", "Hendrik Schröter"]
edition = "2021"
description = "Noise supression using deep filtering"
repository = "https://github.com/Rikorose/DeepFilterNet"
license = "MIT/Apache-2.0"
readme = "../README.md"

[lib]
name = "df"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "sample-hdf5"
path = "src/bin/sample-hdf5.rs"
required-features = ["dataset", "bin"]

[[bin]]
name = "sample-dataset"
path = "src/bin/sample-dataset.rs"
required-features = ["dataset", "bin"]

[[bin]]
name = "deep-filter"
path = "src/bin/enhance_wav.rs"
required-features = ["bin", "tract", "wav-utils", "transforms"]

[features]
default = ["default-model", "vorbis", "flac"]

transforms = ["dep:thiserror", "dep:ndarray", "dep:rubato"]
dataset = [
  "dep:thiserror",
  "dep:ndarray",
  "dep:ndarray-rand",
  "dep:rand_xoshiro",
  "dep:hdf5",
  "dep:rayon",
  "dep:crossbeam-channel",
  "dep:serde_json",
  "dep:serde",
  "dep:hound",
  "dep:rubato",
  "dep:roots",
  "dep:log",
  "dep:anyhow",
]
timings = []
logging = ["dep:log", "dep:crossbeam-channel"]
vorbis = ["dep:lewton", "dep:ogg"]
flac = ["dep:claxon"]
bin = [
  "dep:clap",
  "dep:anyhow",
  "dep:ctrlc",
  "dep:env_logger",
  "dep:rand",
  "dep:ndarray-rand",
  "dep:rust-ini",
  "logging",
]
wav-utils = ["dep:ndarray", "dep:hound"]
use-jemalloc = ["dep:jemallocator"]
tract = [
  "transforms",
  "logging",
  "dep:tract-core",
  "dep:tract-onnx",
  "dep:tract-pulse",
  "dep:tract-hir",
  "dep:rust-ini",
  "dep:ndarray",
  "dep:anyhow",
  "dep:flate2",
  "dep:tar",
]
default-model = []
default-model-ll = []
nightly-features = []
capi = ["tract", "default-model", "dep:ndarray", "logging"]
wasm = [
  "tract",
  "default-model",
  "dep:ndarray",
  "dep:wasm-bindgen",
  "dep:getrandom",
  "dep:console_error_panic_hook",
  "dep:js-sys",
]
hdf5-static = ["hdf5?/static"]

[dependencies]
rustfft = "*"
realfft = "*"
itertools = "*"
num-complex = { version = "*", features = ["serde"] }
log = { version = "*", features = ["std"], optional = true }
rand = { version = "*", optional = true }
rubato = { version = "*", optional = true }
roots = { version = "*", optional = true }
rand_xoshiro = { version = "*", optional = true }
thiserror = { version = "*", optional = true }
anyhow = { version = "*", optional = true, features = ["backtrace"] }
ctrlc = { version = "*", optional = true }
hound = { version = "*", optional = true }
hdf5 = { optional = true, git = "https://github.com/aldanor/hdf5-rust.git" }
ndarray = { workspace = true, optional = true, features = ["serde"] }
ndarray-rand = { version = "*", optional = true }
rayon = { version = "*", optional = true }
crossbeam-channel = { version = "*", optional = true }
serde_json = { version = "*", optional = true }
serde = { version = "*", features = ["derive"], optional = true }
lewton = { version = "*", optional = true }
ogg = { version = "*", optional = true }
claxon = { version = "*", optional = true }
env_logger = { version = "*", optional = true }
clap = { version = "*", optional = true, features = ["derive"] }
rust-ini = { version = "*", optional = true }
tract-core = { version = "*", optional = true }
tract-onnx = { version = "*", optional = true }
tract-pulse = { version = "*", optional = true }
tract-hir = { version = "*", optional = true }
flate2 = { version = "*", optional = true }
tar = { version = "*", optional = true }
wasm-bindgen = { version = "*", optional = true }
getrandom = { version = "*", features = ["js"], optional = true }
console_error_panic_hook = { version = "*", optional = true }
js-sys = { version = "*", optional = true }

[target.'cfg(all(not(windows), not(target_os = "android"), not(target_os = "macos"), not(target_os = "freebsd"), not(target_env = "musl"), not(target_arch = "riscv64")))'.dependencies]
jemallocator = { version = "*", optional = true }

[dev-dependencies]
rand = "*"
rstest = "*"
env_logger = "*"
log = { version = "*", features = ["std"] }

[package.metadata.capi.header]
name = "deep_filter"
subdirectory = "deep_filter"

[package.metadata.capi.pkg_config]
name = "libdeepfilter"
filename = "deepfilter"

[package.metadata.capi.library]
name = "deepfilter"

[package.metadata.deb]
assets = [
  ["LICENSE-MIT", "usr/share/doc/deep_filter/", "644"],
  ["LICENSE-APACHE", "usr/share/doc/deep_filter/", "644"],
]
