[package]
name = "DeepFilterAugment"
version = "0.8.0"
authors = ["Dr. Andrew Cox"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "libdfaugment"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.28" }
numpy = "0.28"
ndarray = { workspace = true }
