[package]
name = "DeepFilterDataLoader"
version = "0.8.0"
authors = ["Dr. Andrew Cox", "Hendrik Schröter"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "libdfdata"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
timings = ["deep_filter/timings"]
hdf5-static = ["deep_filter/hdf5-static"]

[dependencies]
deep_filter = { features = ["dataset", "logging", "vorbis", "flac"], path = "../libDF" }
pyo3 = { version = "*", default-features = true }
numpy = "*"
log = { version = "*", features = ["std"] }
crossbeam-channel = "*"
ndarray = { workspace = true }
