[package]
name = "DeepFilterLib"
version = "0.8.0"
authors = ["Dr. Andrew Cox", "Hendrik Schröter"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "libdf"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
deep_filter = { features = ["transforms", "logging"], path = "../libDF" }
pyo3 = { version = "*" }
numpy = "*"
ndarray = { workspace = true }
